# landcoverpy

./: .env.template  .gitignore  .values  LICENSE  Makefile  README.md  aster.py  classifier.py  cloud_coverage.py  config.py  data_postprocessing.py  greensenti-0.1.2.tar.gz.REMOVED.git-id  model_training.py  pca_and_training.py  plot_spectral_signature.py  products_cc.py  pyproject.toml  rasterpoint.py  raw_index_calculation_composite.py  requirements.txt  setup.cfg  utils.py  visualize_confusion_matrix.py  workflow.py
aster-dem/: README.md  aspect-slope-aster-dem.sh  check-aster-dem.sh  download-aster-dem.py
classifier/: README.md
composite/: README.md  composite.py  requirements.txt
composite/composite/: calculate_composite.py  composite.py
composite/composite/tests/: test_composite.py
databases/points/: mfe_Spain_agricola_2k-20kha_centr_validado.kmz.REMOVED.git-id  mfe_Spain_matorral_500ha_centrVALIDADO.kmz.REMOVED.git-id  mfe_spain_bosqueRibera_fccarb75_lat-fustal_5m2_centr_VALIDADO.kmz.REMOVED.git-id
databases/polygons/: mfe_Spain_matorral_500ha_VALIDADO.kmz.REMOVED.git-id  mfe_spain_bosqueRibera_fccarb75_lat-fustal_5ha_VALIDADO.kmz.REMOVED.git-id  mfe_spain_cities_150ha_validado.kmz.REMOVED.git-id  mfe_spain_dehesas_300ha_VALIDADO.kmz.REMOVED.git-id  mfe_spain_pastos_0Mat_500ha_VALIDADO.kmz.REMOVED.git-id  mfe_spain_plantacion_fccarb75_1sp_lat-fustal_50ha_pol_Validado.kmz.REMOVED.git-id  mfe_spain_rocks_25ha_VALIDADO.kmz.REMOVED.git-id  mfe_spain_water_100ha_VALIDADO.kmz.REMOVED.git-id  mfe_spain_wetland_50ha_VALIDADO.kmz.REMOVED.git-id
demo_deployment/: Dockerfile  configure_minio_mongo.py  docker-compose.yaml  download_products.py  landcover_workflow.py  main.py  requirements_ds_download.txt  requirements_landcoverpy.txt
demo_deployment/app_data/: dataset.csv  lc_labels.json  seasons.json  sl_labels.json
example_inputs/labels_mapping/: lc_labels.json  sl_labels.json
example_inputs/seasons_file/: one_season.json  seasons.json
example_inputs/validated_data/: validated_data.csv  validated_data.geojson
examples/: examples.ipynb  execution_examples.py
forest-db/: Forest_DB_SNieves.geojson
notebooks/: examples.ipynb  explain_model.ipynb  main_usage.ipynb  mean_shap_balues_matrix.ipynb
scripts/: cloud_coverage.py  download_tiles.py  execution_times.py  explain_model.ipynb  jeffreys_matusita.py  lidar.py  lidar_distributed.py  lidar_distributed_full.py  lidar_test.py  merge.py  no_data.py  quality_map.py  rescale_predictions.py
scripts/aster-dem/: aspect-slope-aster-dem.sh  denoise-aster-dem.sh
src/bd_lc_mediterranean/: aster.py  composite.py  data_postprocessing.py  exceptions.py  minio.py  model_training.py  mongo.py  raw_index_calculation_composite.py  workflow.py
src/bd_lc_mediterranean/utilities/: aoi_tiles.py  geometries.py  plot_spectral_signature.py  raster.py  sentinel.py  utils.py
src/etc_workflow/: aster.py  cloud_coverage.py  composite.py  config.py  confusion_matrix.py  data_postprocessing.py  exceptions.py  execution_examples.py  execution_mode.py  execution_times.py  jeffreys_matusita.py  minio.py  model_training.py  mongo.py  no_data.py  plot_spectral_signature.py  raw_index_calculation_composite.py  rescale_predictions.py  utils.py  workflow.py
src/etc_workflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/landcoverpy/: aster.py  composite.py  config.py  data_postprocessing.py  execution_mode.py  landcover_model.py  landcoverpy_model.py  minio.py  model_training.py  mongo.py  raw_index_calculation_composite.py  workflow.py  workflow_predict.py  workflow_train.py
src/slccw/: aster.py  composite.py  data_postprocessing.py  exceptions.py  minio.py  model_training.py  mongo.py  raw_index_calculation_composite.py  workflow.py
topographic-correction/: README.md  helpers.py  raster_point.py  requirements.txt  tc.py
(+26 files in other folders)
