[metadata]
name = landcoverpy
version = 1.0.1.4
author = Antonio Manuel Burgueño Romero
author_email = ambrbr[at]uma.es
description = A scalable land cover classification workflow using Big Data techniques with Sentinel-2 data.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/KhaosResearch/landcoverpy
project_urls =
    Bug Tracker = https://github.com/KhaosResearch/landcoverpy/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Development Status::  5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir=
    =src
packages=find:
install_requires =
    joblib==1.2.0
    mgrs==1.4.5
    minio==7.1.11
    geopandas==0.13.2
    pydantic==1.10.2
    pymongo==4.2.0
    pyproj==3.4.0
    rasterio==1.3.7
    scikit_learn==1.2.2
[options.packages.find]
where=src
