[metadata]
name = landcoverpy
version = 1.3.10
author = Antonio Manuel Burgueño Romero
author_email = ambrbr[at]uma.es
description = A scalable land cover classification workflow using Big Data techniques with Sentinel-2 data.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/KhaosResearch/landcoverpy
project_urls =
    Bug Tracker = https://github.com/KhaosResearch/landcoverpy/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Development Status::  5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir=
    =src
packages=find:
install_requires =
    geopandas==0.14.4
    joblib==1.4.2
    matplotlib==3.9.0
    mgrs==1.4.6
    minio==7.2.7
    numpy==1.26.4
    pandas==2.2.2
    pydantic==2.7.4
    pymongo==4.7.3
    pyproj==3.6.1
    bs4==0.0.2
    rasterio==1.3.10
    lxml==5.2.2
    scikit-learn==1.5.0
    scipy==1.13.1
    seaborn==0.13.2
    sentinelsat==1.2.1
    Shapely==2.0.4
    greensenti==0.6.0
    dask==2024.5.2
    distributed==2024.5.2
    blosc==1.11.1
    lz4==4.3.3
    geojson==3.1.0
    laspy==2.5.3
    pdal==3.4.3
    GDAL==3.6.4

[options.packages.find]
where=src
