[metadata]
name = landcoverpy
version = 1.4.0
author = Antonio Manuel Burgueño Romero
author_email = ambrbr[at]uma.es
description = A scalable land cover classification workflow using Big Data techniques with Sentinel-2 data.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
url = https://github.com/KhaosResearch/landcoverpy
project_urls =
    Bug Tracker = https://github.com/KhaosResearch/landcoverpy/issues
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Development Status::  5 - Production/Stable
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir=
    =src
packages=find:
install_requires =
    geopandas==0.11.1
    joblib==1.1.0
    matplotlib==3.5.3
    mgrs==1.4.5
    minio==7.2.8
    numpy==1.26.3
    pandas==2.1.4
    pydantic==2.7.4
    pydantic-settings
    pymongo==4.8.0
    pyproj==3.4.0
    rasterio==1.3.11
    lxml==4.9.1
    scikit_learn==1.1.2
    scipy==1.14.1
    seaborn==0.12.0
    sentinelsat==1.1.1
    Shapely==1.8.4
    lz4==4.3.3
    geojson==2.5.0
    bs4==0.0.1

[options.packages.find]
where=src
